Project is essentially complete - User routes added
